--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <title>CSS Creature Assignment</title>
 </head>
+
 <body>
-    
+    <center>
+    <div class="creature">
+            <div class="face">
+                <div class="lefteye">
+                     <div id="inner-left"></div>
+                </div>
+                <div class="righteye">
+                    <div id="inner-right"></div>
+                </div> 
+                <div class="mouth"></div>
+            </div>
+    </center>
 </body>
 </html>
